# Server/Protocol/Protocol.py
@@ -1,4 +1,6 @@
 from .RoundData import RoundData2, RoundData3, RoundData4
+import json 
+
 class Protocol:
     def __init__(self, data):
         self.iniciator = data.get('iniciator', {})
@@ -11,23 +13,28 @@ class Protocol:
         self.pubKey = data.get('pubKey', {})
         self.iniciatorMessages = data.get('iniciatorMessages', {})
         self.v = data.get('v', {})
-        self.iniciatorChecks = data.get('iniciatorChecks', {})
+        self.messagesForResponder = data.get('messagesForResponder', {})
         self.responderLabels = data.get('responderLabels', {})
+        self.status = "true"
 
 
     def getRoundData2(self):
         return RoundData2(self.protocolID, self.encryptions, self.iniciatorChoice, self.pubKey, self.iniciatorMessages)
 
     def getRoundData3(self):
-        return RoundData3(self.protocolID, self.v)
+        return RoundData3(self.responder, self.protocolID, self.v)
 
     def getRoundData4(self):
-        return RoundData4(self.protocolID, self.iniciatorChecks)
+        return RoundData4(self.iniciator, self.protocolID, self.messagesForResponder)
 
     def computeResult(self):
-        for key in self.iniciatorLabels:
-            if self.iniciatorLabels[key] in self.responderLabels:
-                res = int(key[1])
+        self.iniciatorLabels = json.loads(self.iniciatorLabels)
+        try:
+            for key in self.iniciatorLabels.keys():
+                if self.iniciatorLabels[key] == self.responderLabels:
+                    res = int(key[1])
+        except Exception as e:
+            print(e)
         return res
 
     def isTurn(self, name):
@@ -37,11 +44,11 @@ class Protocol:
             return int(self.round) == 1 or int(self.round) == 3
 
     def getData(self):
-        if self.round == 1:
+        if int(self.round)== 1:
             return self.getRoundData2()
-        elif self.round == 2:
+        elif int(self.round) == 2:
             return self.getRoundData3()
-        elif self.round == 4:
-            return self.getRoundData3()
+        elif int(self.round) == 3:
+            return self.getRoundData4()
         else:
             return self
