# Server/Protocol/RoundData.py
@@ -6,24 +6,29 @@ class RoundData2():
         self.iniciatorChoice = iniciatorChoice
         self.pubKey = pubKey
         self.iniciatorMessages = iniciatorMessages
+        self.status = "true"
 
     def toDictionary(self):
         return self.__dict__
 
 class RoundData3():
-    def __init__(self, protocolID, v):
+    def __init__(self, responder ,protocolID, v):
         self.protocolID = protocolID
+        self.responder = responder
         self.round = 3
         self.v = v
+        self.status = "true"
 
     def toDictionary(self):
         return self.__dict__
 
 class RoundData4():
-    def __init__(self, protocolID, iniciatorChecks):
+    def __init__(self, iniciator, protocolID, messagesForResponder):
+        self.iniciator = iniciator
         self.protocolID = protocolID
         self.round = 4
-        self.iniciatorChecks = iniciatorChecks
+        self.messagesForResponder = messagesForResponder
+        self.status = "true"
 
     def toDictionary(self):
         return self.__dict__
